Added balldontlie_output.csv file

--- a/NBA Project.ipynb
+++ b/NBA Project.ipynb
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "d97708ab",
+   "id": "0a4b826e",
    "metadata": {
     "scrolled": false
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "8c9d95f0",
+   "id": "54619ab1",
    "metadata": {
     "scrolled": false
    },
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "0e2ab02a",
+   "id": "27cc4779",
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "4f9f2333",
+   "id": "0edc0957",
    "metadata": {
     "scrolled": false
    },
@@ -951,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "923b2ad9",
+   "id": "b6e42320",
    "metadata": {
     "scrolled": true
    },
@@ -1186,7 +1186,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "6728330f",
+   "id": "109359d7",
    "metadata": {
     "scrolled": true
    },
@@ -1551,7 +1551,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "4da6138d",
+   "id": "91e415df",
    "metadata": {
     "scrolled": true
    },
@@ -1906,7 +1906,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "532835ba",
+   "id": "5d81ed93",
    "metadata": {
     "scrolled": true
    },
@@ -2064,7 +2064,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "0c383dec",
+   "id": "f3198f3f",
    "metadata": {
     "scrolled": true
    },
@@ -10792,6 +10792,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 119,
+   "id": "b597a6cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "players_stats_pd.to_csv(\"balldontlie_output.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "aaf2e5ff",
    "metadata": {},
@@ -10929,7 +10939,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a286b489",
+   "id": "85df2ed5",
    "metadata": {
     "scrolled": true
    },
@@ -10952,8 +10962,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "eb9f7226",
+   "execution_count": 117,
+   "id": "42d135b9",
    "metadata": {},
    "outputs": [
     {
@@ -10994,6 +11004,68 @@
       "Anthony Edwards       3547238\n",
       "Cade Cunningham      17896075\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Derrick Coleman</th>\n",
+       "      <td>2895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Larry Johnson</th>\n",
+       "      <td>671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shaquille O'Neal</th>\n",
+       "      <td>735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chris Webber</th>\n",
+       "      <td>847</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Glenn Robinson</th>\n",
+       "      <td>907</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Player ID\n",
+       "Derrick Coleman        2895\n",
+       "Larry Johnson           671\n",
+       "Shaquille O'Neal        735\n",
+       "Chris Webber            847\n",
+       "Glenn Robinson          907"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -11001,23 +11073,42 @@
     "player_data_pd_transposed = player_data_pd.transpose()\n",
     "\n",
     "# Print the transposed data frame\n",
-    "print(player_data_pd_transposed)"
+    "print(player_data_pd_transposed)\n",
+    "player_data_pd_transposed.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "id": "779d4393",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Player ID', 'Season', 'Average Points', 'Average Assists',\n",
+       "       'Average Blocks', 'Average Defensive Rebounds',\n",
+       "       'Average Offensive Rebounds', 'Average 3PT Attempts',\n",
+       "       'Average 3PT Made', 'Average 2PT Attempts', 'Average 2PT Made',\n",
+       "       'Average Free Throw Attempts', 'Average Free Throws Made',\n",
+       "       'Average Steals per Game', 'Average Mins per Game',\n",
+       "       'Average Turn Overs per Game'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "players_stats_pd.columns\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "824393bb",
+   "id": "422ad5e5",
    "metadata": {
     "scrolled": true
    },
@@ -11031,7 +11122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58a7b9e3",
+   "id": "d421dd44",
    "metadata": {},
    "outputs": [],
    "source": []
